--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="container-fluid">
-
         <div class="row">
+
             <header class="col-sm-12 flex-center">
                 <h1>A Glimpse at the Universe</h1>
                 <h5>Enter a Date</h5>
@@ -23,9 +23,14 @@
                     <input id="date" name="date" class="form-control text-center" type="date" placeholder="Date">
                 </form>
             </header>
+
             <div class="col-sm-12 text-center" id="apod">
                 <!-- STUFF GOES HERE -->
             </div>
+
+            <footer>
+                <div class="col-sm-12"></div>
+            </footer>
         </div>
 
     </div>
